Fixed Footer Mobile Extra Padding Bug

--- a/Google Sign In/main.css
+++ b/Google Sign In/main.css
@@ -169,6 +169,13 @@ a {
 
     .footer {
         margin-bottom: 2rem;
+        gap: 1rem;
         width: 80%;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer ul {
+        padding-left: 0;
     }
 }
